--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -24,6 +26,20 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Big Bass Catcher needs access to your camera to take photos of your catches.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Big Bass Catcher needs your location to record fishing spots and deliver accurate weather insights even when you use the app in the background.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Big Bass Catcher needs your location to record where you caught your fish and provide accurate weather conditions.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Big Bass Catcher needs your location to record where you caught your fish and provide accurate weather conditions for your catches.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Big Bass Catcher needs to save photos of your catches to your photo library.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Big Bass Catcher needs access to your photo library to select photos of your catches.</string>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -31,29 +47,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>UISupportedInterfaceOrientations~ipad</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationPortraitUpsideDown</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
-	<key>CADisableMinimumFrameDurationOnPhone</key>
-	<true/>
-	<key>UIApplicationSupportsIndirectInputEvents</key>
-	<true/>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Big Bass Catcher needs your location to record where you caught your fish and provide accurate weather conditions for your catches.</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Big Bass Catcher needs your location to record where you caught your fish and provide accurate weather conditions.</string>
-	<key>NSCameraUsageDescription</key>
-	<string>Big Bass Catcher needs access to your camera to take photos of your catches.</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Big Bass Catcher needs access to your photo library to select photos of your catches.</string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>Big Bass Catcher needs to save photos of your catches to your photo library.</string>
 </dict>
 </plist>
